# pymd2googleslides

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pymd2googleslides/: main.py
pymd2googleslides/slides/: README.md  predefined_layout.py
tests/: main.py
tests/md_examples/: simple.md
